--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+    .normal {
+        @apply bg-yellow-100;
+        @apply text-black;
+        @apply border-black;
+    }
+
+    #root,
+    body,
+    html {
+        @apply h-full;
+        @apply w-full;
+        @apply normal;
+    }
+
+    body {
+        @apply m-0;
+        @apply antialiased;
+        @apply font-sans
+    }
+
+    #root {
+        @apply flex;
+        @apply justify-center;
+    }
+
+    .container {
+        @apply: flex;
+        @apply: flex-col;
+        @apply: sm:w-screen;
+        @apply: md:w-[600px];
+        @apply: lg:w-[80vw];
+        @apply: w-[1120px];
+        @apply: sm:text-sm;
+    }
+
+    .header {
+        @apply: flex;
+        @apply: flex-row;
+        @apply: flex-wrap;
+        @apply: sm:justify-between;
+    }
+
+    .content {
+        @apply: flex;
+        @apply: flex-col;
+        @apply: flex-wrap;
+        @apply: sm:justify-between;
+    }
 }
